--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Feliz niver de namoro!!!</title>
   <link rel="stylesheet" href="./style.css">
-  <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon" />
 
 </head>
 <body>
